# userdatamodel

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Pipfile  README.md  migration.sql  migration_pr15.sql  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: table_definitons.sql
migrations/: migration_pr22.sql  migration_pr25.sql  migration_pr_34.sql  migration_pr_35.sql
userdatamodel/: aws.py  driver.py  init_defaults.py  models.py  oauth.py  user.py
userdatamodel/syncing/: dbgap.py
